Fixed z-index CSS bug.

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,11 @@ html {
 }
 
 body {
-	display: flex;
-	flex-direction: column;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	font-size: 1.6rem;
 	line-height: 1.6;
 	overflow: hidden;
@@ -32,7 +35,20 @@ p {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	flex: 1 1 auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1;
+}
+
+.windows {
 	position: relative;
-	z-index: 0;
+	z-index: 1;
+}
+
+.menus {
+	position: relative;
+	z-index: 1;
 }
