--- a/src/window.css
+++ b/src/window.css
@@ -2,8 +2,6 @@
 	border-radius: 0.7rem; /* Needed for box shadow */
 	box-shadow: 0 0 4.3rem rgba(0, 0, 0, 0.5);
 	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
 	position: absolute;
 	z-index: 0;
 }
@@ -27,12 +25,11 @@
 .title-bar {
 	background-color: rgb(35, 35, 35);
 	border-radius: 0.7rem 0.7rem 0 0;
-	flex: 0 0 auto;
 	font-family: 'Open Sans';
 	height: 3.2rem;
-	width: 100%;
-	z-index: 100;
 	overflow: hidden;
+	position: relative;
+	z-index: 100;
 }
 
 .title-bar .title {
@@ -98,22 +95,23 @@
 	border: 0.1rem solid rgb(164, 164, 164);
 	border-top: none;
 	border-radius: 0 0 0.7rem 0.7rem;
-	flex: 1 1 auto;
-	height: calc(100% - 0.1rem);
-	width: calc(100% - 0.2rem);
-	z-index: 10;
 	overflow: hidden;
-	position: relative;
+	position: absolute;
+	top: 3.2rem;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 10;
 }
 
 .canvas {
+	overflow: auto;
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	background-color: white;
-	overflow: auto;
 }
 
 .resize-handle-n,
